// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarMenu.jsx renders without crashing 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBarMenu
    isOpen={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SideBarMenuItem
          href="http://opentrv.org.uk/what-is-opentrv/"
          text="About OpenTRV"
        />,
        <SideBarMenuItem
          href="http://opentrv.org.uk/principles/"
          text="OpenTRV principles"
        />,
        <SideBarMenuItem
          href="https://twitter.com/OpenTRV"
          text="OpenTRV Twitter"
        />,
        <SideBarMenuItem
          href="http://opentrv.org.uk/documents/"
          text="TRV documentation"
        />,
        <SideBarMenuItem
          href="https://github.com/jack-evans/opentrv-webui/issues"
          text="Report an Issue"
        />,
      ],
      "className": "SideBarMenu",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "href": "http://opentrv.org.uk/what-is-opentrv/",
          "text": "About OpenTRV",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "href": "http://opentrv.org.uk/principles/",
          "text": "OpenTRV principles",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "href": "https://twitter.com/OpenTRV",
          "text": "OpenTRV Twitter",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "href": "http://opentrv.org.uk/documents/",
          "text": "TRV documentation",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "function",
        "props": Object {
          "href": "https://github.com/jack-evans/opentrv-webui/issues",
          "text": "Report an Issue",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SideBarMenuItem
            href="http://opentrv.org.uk/what-is-opentrv/"
            text="About OpenTRV"
          />,
          <SideBarMenuItem
            href="http://opentrv.org.uk/principles/"
            text="OpenTRV principles"
          />,
          <SideBarMenuItem
            href="https://twitter.com/OpenTRV"
            text="OpenTRV Twitter"
          />,
          <SideBarMenuItem
            href="http://opentrv.org.uk/documents/"
            text="TRV documentation"
          />,
          <SideBarMenuItem
            href="https://github.com/jack-evans/opentrv-webui/issues"
            text="Report an Issue"
          />,
        ],
        "className": "SideBarMenu",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "href": "http://opentrv.org.uk/what-is-opentrv/",
            "text": "About OpenTRV",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "href": "http://opentrv.org.uk/principles/",
            "text": "OpenTRV principles",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "href": "https://twitter.com/OpenTRV",
            "text": "OpenTRV Twitter",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "href": "http://opentrv.org.uk/documents/",
            "text": "TRV documentation",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "function",
          "props": Object {
            "href": "https://github.com/jack-evans/opentrv-webui/issues",
            "text": "Report an Issue",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`SideBarMenu.jsx when isOpen is true renders with the SideBarMenu__open class 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SideBarMenu
    isOpen={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SideBarMenuItem
          href="http://opentrv.org.uk/what-is-opentrv/"
          text="About OpenTRV"
        />,
        <SideBarMenuItem
          href="http://opentrv.org.uk/principles/"
          text="OpenTRV principles"
        />,
        <SideBarMenuItem
          href="https://twitter.com/OpenTRV"
          text="OpenTRV Twitter"
        />,
        <SideBarMenuItem
          href="http://opentrv.org.uk/documents/"
          text="TRV documentation"
        />,
        <SideBarMenuItem
          href="https://github.com/jack-evans/opentrv-webui/issues"
          text="Report an Issue"
        />,
      ],
      "className": "SideBarMenu SideBarMenu__open",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "function",
        "props": Object {
          "href": "http://opentrv.org.uk/what-is-opentrv/",
          "text": "About OpenTRV",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "href": "http://opentrv.org.uk/principles/",
          "text": "OpenTRV principles",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "href": "https://twitter.com/OpenTRV",
          "text": "OpenTRV Twitter",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "href": "http://opentrv.org.uk/documents/",
          "text": "TRV documentation",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "function",
        "props": Object {
          "href": "https://github.com/jack-evans/opentrv-webui/issues",
          "text": "Report an Issue",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SideBarMenuItem
            href="http://opentrv.org.uk/what-is-opentrv/"
            text="About OpenTRV"
          />,
          <SideBarMenuItem
            href="http://opentrv.org.uk/principles/"
            text="OpenTRV principles"
          />,
          <SideBarMenuItem
            href="https://twitter.com/OpenTRV"
            text="OpenTRV Twitter"
          />,
          <SideBarMenuItem
            href="http://opentrv.org.uk/documents/"
            text="TRV documentation"
          />,
          <SideBarMenuItem
            href="https://github.com/jack-evans/opentrv-webui/issues"
            text="Report an Issue"
          />,
        ],
        "className": "SideBarMenu SideBarMenu__open",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "function",
          "props": Object {
            "href": "http://opentrv.org.uk/what-is-opentrv/",
            "text": "About OpenTRV",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "href": "http://opentrv.org.uk/principles/",
            "text": "OpenTRV principles",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "href": "https://twitter.com/OpenTRV",
            "text": "OpenTRV Twitter",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "href": "http://opentrv.org.uk/documents/",
            "text": "TRV documentation",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "function",
          "props": Object {
            "href": "https://github.com/jack-evans/opentrv-webui/issues",
            "text": "Report an Issue",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
